--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordion Menu</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="./app.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="accordionContainer">
+            <h1>Frequently Asked Questions (FAQ)</h1>
+            <div class="accordionHeader">
+                <h2>Lorem ipsum dolor sit amet?</h2>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="accordionDescription">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure itaque quisquam numquam vero perferendis accusamus libero inventore ea voluptatum quasi.</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="accordionContainer">
+            <div class="accordionHeader">
+                <h2>Lorem ipsum dolor sit amet?</h2>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="accordionDescription">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure itaque quisquam numquam vero perferendis accusamus libero inventore ea voluptatum quasi.</p>
+            </div>
+        </div>
+
+
+
+        <div class="accordionContainer">
+            <div class="accordionHeader">
+                <h2>Lorem ipsum dolor sit amet?</h2>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="accordionDescription">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure itaque quisquam numquam vero perferendis accusamus libero inventore ea voluptatum quasi.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
